# autopilot_neural_network

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
autopilot_neural_network/: autopilot.py  data_collector.py  parameters_client_node.py
config/: parameters.yaml
launch/: autopilot.launch.py  data_collector.launch.py
scripts/: dataset.py  eval.py  model.py  sampler.py  train.py
