<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autopilot_neural_network</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for end-to-end autonomous driving using a convolutional neural network.</description>
  <maintainer email="workabotic@gmail.com">Lucas Mazzetto</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
